cmake_minimum_required (VERSION 2.8)
set( APPNAME tstool )
project( ${APPNAME} )
if( DEBUG )
    add_definitions( "-Wall -g" )
endif()
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/src )
aux_source_directory( ${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRCS)
add_executable( ${APPNAME} ${DIR_SRCS} )
target_link_libraries( ${APPNAME} pthread )
